--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -26,11 +26,11 @@
 
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
-                    <label class="form-label">Documento de identidad <span class="required">*</span></label>
+                    <label class="form-label">Usuario <span class="required">*</span></label>
                     <input type="text" class="form-control" placeholder="ej. 123456789" formControlName="dni"
                         [class.is-invalid]="isFieldInvalid('dni')">
                     <div class="invalid-feedback" *ngIf="isFieldInvalid('dni')">
-                        <span *ngIf="loginForm.get('dni')?.errors?.['required']">El documento de identidad es
+                        <span *ngIf="loginForm.get('dni')?.errors?.['required']">El usuario es
                             requerido</span>
                     </div>
                 </div>
